feat: DEV-21 remove unused import